# vlm-relabel-data-gen

./: .env.example  .gitignore  CLAUDE.md  DISTRIBUTED.md  README.md  config.toml  dataset.py  j_download.sh  j_scene_graph.sh  j_semantic.sh  pyproject.toml
configs/: annotate_gemini.toml  annotate_openai.toml  download.toml  qwen_local.toml  qwen_vllm.toml  scene_graph.toml  semantic_10k.toml
data/: annotated.parquet  annotated_gemini_scene.parquet  annotated_openai_twocall.parquet  annotated_qwen_scene.parquet  annotated_qwen_twocall.parquet  annotated_semantic.parquet  relabeled.parquet  scene_graphs.parquet  semantic_annotations.parquet
data/old_exp/: annotated_gemini_robotic.parquet  annotated_gemini_twocall.parquet  annotated_openai_robotic.parquet  annotated_openai_scene.parquet  annotated_qwen_robotic.parquet  annotated_semantic.parquet  metadata.parquet
docs/: pipeline-plan-v0.md  pipeline-plan-v1.md
images/: metadata.jsonl
jobs/: annotate.sh  download.sh  scene_graphs.sh  semantic_extract.sh
scripts/: annotate.py  backfill_metadata.py  count_scene_graph_rows.py  distribute.py  download.py  export_json.py  extract_scene_graphs.py  extract_semantic.py  merge.py  rebuild_scene_graphs.py  relabel.py  setup_models.py  show_parquet.py
src/datagen/: annotator.py  config.py  download.py  filter.py  pipeline.py  prompts.py  scene_pipeline.py  semantic_pipeline.py  storage.py
src/datagen/annotators/: __init__.py  base.py  robotic.py  scene.py  semantic.py  simple.py  two_call.py
src/datagen/scene/: __init__.py  depth.py  extractor.py  geometry.py  grounded_sam.py  models.py
src/datagen/semantic/: __init__.py  extractor.py  models.py  predicates.py  verifier.py
src/datagen/vlm/: __init__.py  base.py  gemini.py  openai_backend.py  qwen_local.py  vllm.py
