[project]
name = "data-gen"
version = "0.1.0"
description = "Large-scale image dataset generation and VLM relabeling pipeline"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.68.0",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "pydantic-settings[toml]>=2.13.1",
    "ray[data]>=2.54.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datagen"]
